--- a/packages.config
+++ b/packages.config
@@ -3,5 +3,6 @@
   <package id="Costura.Fody" version="4.1.0" targetFramework="net462" />
   <package id="Fody" version="6.0.0" targetFramework="net462" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="12.0.3-beta2" targetFramework="net462" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks.Dataflow" version="4.10.0" targetFramework="net462" />
 </packages>
